--- a/Apple/index.html
+++ b/Apple/index.html
@@ -1,17 +1,168 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <!-- <meta http-equiv="refresh" content="3;url=https://www.youtube.com/watch?v=JB3INq8n9is" /> -->
+    <script src="https://kit.fontawesome.com/d9344064ff.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <title>宇智波騙你</title>
+    <style>
+        .nav-item {
+            font-size: 14px;
+            margin-left: 30px;
+            margin-right: 30px;
+        }
+
+        .navbar-toggler-icon {
+            width: 1.5em;
+            height: 1.5em;
+        }
+
+        .Purchase {
+            margin-top: 15px;
+        }
+        img{
+            width: 480px;
+        }
+    </style>
+    <title>購買 Apple 產品 - Apple (台灣)</title>
 </head>
+
 <body>
-    <img src="./img/fake.png" alt="">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><i class="fab fa-apple"></i></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">iPhone</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">iPad</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">MacPro</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container-xl Purchase">
+        <div class="row">
+            <div class="col-12 col-md-6 d-flex justify-content-center">
+                <div id="productName">
+
+                </div>
+            </div>
+            <div class="col-12 col-md-6 d-flex justify-content-center">
+                <div id="productPrice">
+
+                </div>
+            </div>
+            <div class="col-12"></div>
+            <div class="col-12 col-md-6 d-flex d-flex justify-content-center">
+                <div id="productPic">
+
+                </div>
+            </div>
+            <div class="col-12 col-md-6 d-flex">
+                <div id="productColor">
+
+                </div>
+                <div id="productType">
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <script>
+        var Product = {
+            iPhone: {
+                Detail: {
+                    productName: 'iPhone 12',
+                    imgUrl: './img/iphone-12-select-family.jpg'
+                },
+                Colorstyle: [
+                    { color: '白色', colorValue: '#f0f0f0', imageUrl: './img/iphone-12-white-select.png' },
+                    { color: '黑色', colorValue: '#000000', imageUrl: './img/iphone-12-black-select.png' },
+                    { color: '藍色', colorValue: '#004b97', imageUrl: './img/iphone-12-blue-select.png' },
+                    { color: '紅色', colorValue: '#990036', imageUrl: './img/iphone-12-red-select.png' },
+                ],
+                Storge: [
+                    { size: '64GB', price: 26900 },
+                    { size: '128GB', price: 28500 },
+                    { size: '256GB', price: 32000 },
+                ]
+            },
+            iPad: {
+                Detail: {
+                    productName: 'iPad',
+                    imgUrl: './img/ipad-2020-hero-landing.jpg'
+                },
+                Colorstyle: [
+                    { color: '太空灰色', colorValue: '#6e6969', imageUrl: './img/ipad-2020-hero-space-wifi-select.png' },
+                    { color: '銀色', colorValue: '#b9aeae', imageUrl: './img/ipad-2020-hero-silver-wifi-select.png' },
+                    { color: '金色', colorValue: '#ceb7a8', imageUrl: './img/ipad-2020-hero-gold-wifi-select.png' },
+                ],
+                Storge: [
+                    { size: '32GB', price: 10900 },
+                    { size: '128GB', price: 13900 },
+                ]
+            },
+            MacPro: {
+                Detail: {
+                    productName: 'MacPro 13',
+                    imgUrl: './img/mac-family-compare.png'
+                },
+                Colorstyle: [
+                    { color: '太空灰色', colorValue: '#6e6969', imageUrl: './img/macbookpro-13-spacegray.png' },
+                    { color: '銀色', colorValue: '#b9aeae', imageUrl: './img/macbookpro-13-silver.png' },
+                    { color: '金色', colorValue: '#ceb7a8', imageUrl: './img/macbookpro-13-gold.png' },
+                ],
+                Storge: [
+                    { size: '256GB', price: 51300 },
+                    { size: '512GB', price: 57300 },
+                    { size: '1TB', price: 63300 },
+                    { size: '2TB', price: 75300 },
+                ]
+            }
+        };
+
+        const listLink = document.querySelectorAll('.nav-link');
+
+        let _name = document.querySelector('#productName');
+        let _color = document.querySelector('#productColor');
+        let _type = document.querySelector('#productType');
+        let _price = document.querySelector('#productPrice');
+        let _pic = document.querySelector('#productPic');
+
+        listLink.forEach((x,product) => {
+            product= x.innerHTML;
+            x.addEventListener('click', () => {
+                console.log(product);
+                //reset
+                _name.innerHTML = `${Product[product].Detail.productName}`;
+                _price.innerHTML = ``;
+                _pic.innerHTML = '';
+                _color.innerHTML = '產品顏色';
+                _type.innerHTML = ' 產品規格';
+                let _img = document.createElement('img');
+                _img.setAttribute('src', Product[product].Detail.imgUrl);
+                _pic.appendChild(_img);
+            })
+        })
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
