--- a/Pokemon/index_sh.html
+++ b/Pokemon/index_sh.html
@@ -68,7 +68,7 @@
 
         document.querySelector("#reSet").addEventListener('click', function () {
             container.innerHTML = '';
-            PokemonCount = 1;
+            _index = 1;
         });
 
         let timerBtn = document.querySelector("#timerSlot");
