--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -164,7 +164,7 @@
                 multi++;
                 numSecond = input.innerText;
                 input.innerText = Number(numFirst) + Number(numSecond);
-                history.innerText = `${numFirst}${Operator}${numSecond}`;
+                history.innerText = `${numSecond}${Operator}${numFirst}`;
             } else {
                 numFirst = input.innerText;
                 input.innerText = 0;
