--- a/CraftingIdle/index.htm
+++ b/CraftingIdle/index.htm
@@ -1,40 +1,27 @@
-﻿<!DOCTYPE html>
+﻿<!doctype html>
 <html lang="zh_TW">
-	<head>
-		<meta name="google" content="notranslate">
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-		<meta name="mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<head> <title>Crafting Idle</title>
+
+<head>
+	<meta name="google" content="notranslate">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link rel="shortcut icon" type="image/png" href="./img/wheat_icon.png">
 	<link rel="apple-touch-icon" sizes="120x120" href="./img/wheat_icon.png">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	</head>
-	<body>
-	<div id="Logobar">
-	  
-	  <a href="#" id="logo"><img src="./img/wheat_icon.png" width="32px"> Crafting Idle</a> 
-	  
-	  <div id="Logobar-left">
-		<a class="active" href="#">v0.1</a></div>
-	</div>
-	<div id="bottombar">
-	  <a href="#" onclick="clickCounter();"><img src="./img/home_icon.png" width="32px"></a>
-	  <a href="#" onclick="clickCounter();"><img src="./img/align_just.png" width="32px"></a>
-	  <a href="#" onclick="clickCounter();"><img src="./img/zoom_icon.png" width="32px"></a>
-	  <a href="#" onclick="clickCounter();"><img src="./img/faq_icon.png" width="32px"></a>
-	  <a href="#" onclick="clickReset();"><img src="./img/wrench_icon.png" width="32px"></a> 
-	</div>
-	<div style="margin-top:60px; padding:8px 8px 8px;">
-	</div>
-	
-	<div id="object"><a href="#" onclick="clickCounter();"><img src="./img/wheat_icon.png"></a></div>
-	 <div id="result">小麥 : 0</div> 
-	<a>關閉後會直接重置。</a> 
-	<script src="scripts/progress.js"></script>
-	<script src="scripts/clickspawner.js"></script>
-	<body>
-	</body>
-	</html>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+	<title>CraftingIdle</title>
+</head>
+
+<body>
+	<h1>CraftingIdle</h1>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+		crossorigin="anonymous"></script>
+</body>
+
+</html>
