--- a/OpenSeafood/balance/index.html
+++ b/OpenSeafood/balance/index.html
@@ -164,7 +164,7 @@
             </div>
         </div>
             <Script>
-                document.querySelector('.totalpay').addEventListener("click", function (event) {
+                document.querySelectorAll('.totalpay').addEventListener("click", function (event) {
                     window.location.href='../checkout';
                 });
             </Script>
