--- a/OpenSeafood/checkout/purchase.html
+++ b/OpenSeafood/checkout/purchase.html
@@ -87,7 +87,7 @@
         <nav aria-label="breadcrumb" style="margin-top: 15px;">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="#">首頁</a></li>
-                <li class="breadcrumb-item"><a href="#">付款方式</a></li>
+                <li class="breadcrumb-item"><a href="#">確認付款</a></li>
                 <li class="breadcrumb-item active" aria-current="page"> 複核 + 購買</li>
             </ol>
         </nav>
@@ -95,18 +95,23 @@
         <div class="row flex-column-reverse flex-lg-row">
             <div class="col-12 col-md-8">
                 <div class="card text-white bg-dark" style="margin: 30px 0;">
-                    <div class="card-header">請選擇付款方式
-                    </div>
                     <div class="card-body">
-                        <p class="card-title float-end fs-4">新增信用卡資訊</p>
+                        <p class="card-text">新增資金 <small class="float-end">NT 150</small></p>
+                        <hr>
+                        <p class="card-text">小計 : <small class="float-end">NT 150</small></p>
+                        <hr>
+                        <p class="card-text">總額 : <small class="float-end">NT 150</small></p>
+                        所有價格均包含增值稅（如適用）
                     </div>
-                    <button type="button" style="margin: 5px;" class="btn btn-primary purchase">繼續</button>
+
+                    <button type="button" style="margin: 5px;" class="btn btn-success" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdrop">購買</button>
                 </div>
             </div>
 
             <div class="col-12 col-md-4">
                 <div class="card text-white bg-dark" style="margin: 30px 0;">
-                    <div class="card-header">付款方式</div>
+                    <div class="card-header">確認付款</div>
                     <div class="card-body">
                         <p>我們接受下列安全的付款方式：</p>
                         <img src="./img/payment_visa.png" alt="">
@@ -115,13 +120,26 @@
                     </div>
                 </div>
             </div>
-            <span>如需詳細資料，請參閱用戶協議。</span>
 
-            <Script>
-                document.querySelector('.purchase').addEventListener("click", function (event) {
-                    window.location.href='../checkout/purchase.html';
-                });
-            </Script>
+            <div class="modal fade text-dark" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="staticBackdropLabel">覆核資訊</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>確認無誤</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary">繼續</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+            <span>如需詳細資料，請參閱用戶協議。</span>
 
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
