--- a/OpenSea/balance/index.html
+++ b/OpenSea/balance/index.html
@@ -94,7 +94,7 @@
 
         <div class="row">
             <P>新增資金至 Wallet</P>
-            <p>Wallet 的資金可用於在 Seafood 上購買物件及你所想的到藝術品，</p>
+            <p>Wallet 的資金可用於在 OpenSea 上購買物件及你所想的到藝術品，</p>
             <p>也支援與其他會員及使用者交易使用。您將可以在下訂單前複核訂單內容。</p>
         </div>
 
