--- a/OpenSea/balance/index.html
+++ b/OpenSea/balance/index.html
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-success float-end totalpay">新增資金</button>
+                    <button type="button" class="btn btn-success float-end price1">新增資金</button>
                 </div>
                 <div class="card mb-3 bg-litegray">
                     <div class="row g-0">
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-success float-end totalpay">新增資金</button>
+                    <button type="button" class="btn btn-success float-end price2">新增資金</button>
                 </div>
                 <div class="card mb-3 bg-litegray">
                     <div class="row g-0">
@@ -129,7 +129,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-success float-end totalpay">新增資金</button>
+                    <button type="button" class="btn btn-success float-end price3">新增資金</button>
                 </div>
             </div>
 
@@ -141,7 +141,7 @@
                     </div>
                     <button type="button" style="margin: 5px;" class="btn btn-light">查看使用紀錄</button>
                     <button type="button" style="margin: 5px;" class="btn btn-primary" data-bs-toggle="modal"
-                        data-bs-target="#staticBackdrop">兌換禮物序號</button>
+                        data-bs-target="#staticBackdrop">轉帳提領</button>
                 </div>
             </div>
 
@@ -150,12 +150,12 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="staticBackdropLabel">兌換禮物或序號碼</h5>
+                        <h5 class="modal-title" id="staticBackdropLabel">轉帳提領</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <p>儲值新增資金或至您的 Wallet</p>
-                        <p class="card-text"><small class="text-muted">序號碼</small></p>
+                        <p>提領資金</p>
+                        <p class="card-text"><small class="text-muted">現金</small></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary">繼續</button>
@@ -164,8 +164,14 @@
             </div>
         </div>
             <Script>
-                document.querySelectorAll('.totalpay').addEventListener("click", function (event) {
-                    window.location.href='../checkout';
+                document.querySelector('.price1').addEventListener("click", function (event) {
+                    window.location.href="../checkout?prices='150'";
+                });
+                document.querySelector('.price2').addEventListener("click", function (event) {
+                    window.location.href="../checkout?prices='450'";
+                });
+                document.querySelector('.price3').addEventListener("click", function (event) {
+                    window.location.href="../checkout?prices='1500'";
                 });
             </Script>
 
