--- a/OpenSea/checkout/purchase.html
+++ b/OpenSea/checkout/purchase.html
@@ -96,11 +96,11 @@
             <div class="col-12 col-md-8">
                 <div class="card text-white bg-dark" style="margin: 30px 0;">
                     <div class="card-body">
-                        <p class="card-text">新增資金 <small class="float-end">NT 150</small></p>
+                        <p class="card-text">新增資金 <small class="float-end">NT$ 0</small></p>
                         <hr>
-                        <p class="card-text">小計 : <small class="float-end">NT 150</small></p>
+                        <p class="card-text">小計 : <small class="float-end">NT$ 0</small></p>
                         <hr>
-                        <p class="card-text">總額 : <small class="float-end">NT 150</small></p>
+                        <p class="card-text">總額 : <small class="float-end">NT$ 0</small></p>
                         所有價格均包含增值稅（如適用）
                     </div>
 
